JUnit Tests Failing on JDK 25 with Mockito SOLVED